2007-08-13  Lucas Rocha  <lucasr@gnome.org>

	* configure.in: post-release bump to 2.19.91

==================== 2.19.90 ====================

2007-08-13  Lucas Rocha  <lucasr@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.19.90.

2007-07-30  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.19.90

==================== 2.19.6 ====================

2007-07-30  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.19.6.

2007-07-08  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.19.6

==================== 2.19.5 ====================

2007-07-08  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.19.5.

2007-06-26  Ray Strode  <rstrode@redhat.com>

	* layout/applications.menu: don't show screensavers
	in the menus (bug 448361)

2007-06-18  Vincent Untz  <vuntz@gnome.org>

	* acinclude.m4: use python-config to get python includes
	Patch from Sebastien Bacher <seb128@ubuntu.com>. Fix bug #448711.

2007-06-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.19.5

==================== 2.19.4 ====================

2007-06-17  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.19.4.

2007-06-15  Vincent Untz  <vuntz@gnome.org>

	Fix crash with inotify backend happening when ~/.config/menus is
	created (in fact, when there are more than one creation_monitors for a
	given watch). Bug #422966.

	* libmenu/menu-monitor-inotify.c: (handle_inotify_event): remove the
	monitor from creation_monitors only if we couldn't add the monitor. If
	we succeed in creating it, it'll get remove later, in remove_watch().
	(remove_watch): free watch
	(remove_watch_foreach): free watch
	(close_inotify): destroy the path_to_watch hash table

2007-06-14  Colin Walters  <walters@redhat.com>

	* python/gmenu.c (pygmenu_tree_handle_monitor_callback): Acquire and
	release Python GIL around invocation (#442747).