@@ -1,3 +1,9 @@
+2007-08-20  Rob Bradford  <rob@robster.org.uk>
+
+	* libmenu/gmenu-tree.c: (gmenu_tree_directory_get_tree):
+	Avoid potentially passing NULL into gmenu_tree_ref 
+	(See #430074 for the background on this.)
+
 2007-08-13  Lucas Rocha  <lucasr@gnome.org>
 
 	* configure.in: post-release bump to 2.19.91
